# winkioskshell

./: Cargo.toml  README.md  build.rs
.github/workflows/: create-release.yml  rust.yml
src/: main.rs  mainconfig.rs  release.rs  win_elevation_functions.rs  win_kiosk_settings.rs  win_kiosk_shell.rs
ui/: confirmdialog.slint  kioskwindow.slint  main.slint  messagebox.slint  settingswindow.slint
